[gd_scene load_steps=88 format=2]

[ext_resource path="res://Player/Player3D/Doll3D.tscn" type="PackedScene" id=1]
[ext_resource path="res://Player/StageScene3D/BaseStageScene3D.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player/Props/platform.png" type="Texture" id=3]
[ext_resource path="res://Player/Props/Tentacles.tscn" type="PackedScene" id=4]
[ext_resource path="res://Player/StageScene3D/Scenes3/TentaclesBondage.gd" type="Script" id=5]

[sub_resource type="AnimationNodeAnimation" id=3]
animation = "CuffedArms-loop"

[sub_resource type="AnimationNodeBlend2" id=4]
filter_enabled = true
filters = [ "Doll3D/Skeleton:Arm.L", "Doll3D/Skeleton:Arm.R", "Doll3D/Skeleton:ForeArm.L", "Doll3D/Skeleton:ForeArm.R", "Doll3D/Skeleton:Hand.L", "Doll3D/Skeleton:Hand.R" ]

[sub_resource type="AnimationNodeAnimation" id=158]
animation = "TentBondageFromSexTease_1"

[sub_resource type="AnimationNodeAnimation" id=92]
animation = "TentBondageKneel_1-loop"

[sub_resource type="AnimationNodeAnimation" id=93]
animation = "TentBondageSexFast_1-loop"

[sub_resource type="AnimationNodeAnimation" id=94]
animation = "TentBondageSexInside_1-loop"

[sub_resource type="AnimationNodeAnimation" id=95]
animation = "TentBondageSexTease_1-loop"

[sub_resource type="AnimationNodeAnimation" id=96]
animation = "TentBondageSex_1-loop"

[sub_resource type="AnimationNodeAnimation" id=97]
animation = "TentBondageStart_1-loop"

[sub_resource type="AnimationNodeAnimation" id=98]
animation = "TentBondageStrokeFast_1-loop"

[sub_resource type="AnimationNodeAnimation" id=99]
animation = "TentBondageStroke_1-loop"

[sub_resource type="AnimationNodeAnimation" id=159]
animation = "TentBondageToSexTease_1"

[sub_resource type="AnimationNodeAnimation" id=100]
animation = "TentBondage_1-loop"

[sub_resource type="AnimationNodeStateMachineTransition" id=101]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=102]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=103]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=104]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=107]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=108]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=109]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=110]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=111]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=112]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=113]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=114]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=115]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=116]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=117]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=118]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=121]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=122]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=160]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id=161]
switch_mode = 2
auto_advance = true
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id=162]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id=163]
switch_mode = 2
auto_advance = true
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id=170]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=171]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=174]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=175]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachine" id=123]
states/TentBondageFromSexTease_1/node = SubResource( 158 )
states/TentBondageFromSexTease_1/position = Vector2( 597, 281 )
states/TentBondageKneel_1-loop/node = SubResource( 92 )
states/TentBondageKneel_1-loop/position = Vector2( 15, 111 )
states/TentBondageSexFast_1-loop/node = SubResource( 93 )
states/TentBondageSexFast_1-loop/position = Vector2( 369, 596 )
states/TentBondageSexInside_1-loop/node = SubResource( 94 )
states/TentBondageSexInside_1-loop/position = Vector2( 141, 420 )
states/TentBondageSexTease_1-loop/node = SubResource( 95 )
states/TentBondageSexTease_1-loop/position = Vector2( 813, 357 )
states/TentBondageSex_1-loop/node = SubResource( 96 )
states/TentBondageSex_1-loop/position = Vector2( 619, 453 )
states/TentBondageStart_1-loop/node = SubResource( 97 )
states/TentBondageStart_1-loop/position = Vector2( 382, 70 )
states/TentBondageStrokeFast_1-loop/node = SubResource( 98 )
states/TentBondageStrokeFast_1-loop/position = Vector2( 1071, 197 )
states/TentBondageStroke_1-loop/node = SubResource( 99 )
states/TentBondageStroke_1-loop/position = Vector2( 722, 189 )
states/TentBondageToSexTease_1/node = SubResource( 159 )
states/TentBondageToSexTease_1/position = Vector2( 253, 326 )
states/TentBondage_1-loop/node = SubResource( 100 )
states/TentBondage_1-loop/position = Vector2( 288, 183 )
transitions = [ "TentBondageStart_1-loop", "TentBondage_1-loop", SubResource( 101 ), "TentBondage_1-loop", "TentBondageStart_1-loop", SubResource( 102 ), "TentBondage_1-loop", "TentBondageKneel_1-loop", SubResource( 103 ), "TentBondageKneel_1-loop", "TentBondage_1-loop", SubResource( 104 ), "TentBondageSexTease_1-loop", "TentBondageSexInside_1-loop", SubResource( 107 ), "TentBondageSexInside_1-loop", "TentBondageSexTease_1-loop", SubResource( 108 ), "TentBondageSexInside_1-loop", "TentBondageSex_1-loop", SubResource( 109 ), "TentBondageSex_1-loop", "TentBondageSexInside_1-loop", SubResource( 110 ), "TentBondageSex_1-loop", "TentBondageSexTease_1-loop", SubResource( 111 ), "TentBondageSexTease_1-loop", "TentBondageSex_1-loop", SubResource( 112 ), "TentBondageSexFast_1-loop", "TentBondageSexTease_1-loop", SubResource( 113 ), "TentBondageSexTease_1-loop", "TentBondageSexFast_1-loop", SubResource( 114 ), "TentBondageSexFast_1-loop", "TentBondageSexInside_1-loop", SubResource( 115 ), "TentBondageSexInside_1-loop", "TentBondageSexFast_1-loop", SubResource( 116 ), "TentBondageSex_1-loop", "TentBondageSexFast_1-loop", SubResource( 117 ), "TentBondageSexFast_1-loop", "TentBondageSex_1-loop", SubResource( 118 ), "TentBondageStroke_1-loop", "TentBondageStrokeFast_1-loop", SubResource( 121 ), "TentBondageStrokeFast_1-loop", "TentBondageStroke_1-loop", SubResource( 122 ), "TentBondage_1-loop", "TentBondageToSexTease_1", SubResource( 160 ), "TentBondageToSexTease_1", "TentBondageSexTease_1-loop", SubResource( 161 ), "TentBondageSexTease_1-loop", "TentBondageFromSexTease_1", SubResource( 162 ), "TentBondageFromSexTease_1", "TentBondage_1-loop", SubResource( 163 ), "TentBondageSexTease_1-loop", "TentBondageStroke_1-loop", SubResource( 170 ), "TentBondageStroke_1-loop", "TentBondageSexTease_1-loop", SubResource( 171 ), "TentBondageStart_1-loop", "TentBondageKneel_1-loop", SubResource( 174 ), "TentBondageKneel_1-loop", "TentBondageStart_1-loop", SubResource( 175 ) ]
start_node = "TentBondageStart_1-loop"
graph_offset = Vector2( -241, -107 )

[sub_resource type="AnimationNodeBlendTree" id=124]
graph_offset = Vector2( -12, 28 )
nodes/Animation/node = SubResource( 3 )
nodes/Animation/position = Vector2( 140, 280 )
nodes/CuffsBlend/node = SubResource( 4 )
nodes/CuffsBlend/position = Vector2( 440, 160 )
nodes/StateMachine/node = SubResource( 123 )
nodes/StateMachine/position = Vector2( 180, 120 )
nodes/output/position = Vector2( 680, 180 )
node_connections = [ "CuffsBlend", 0, "StateMachine", "CuffsBlend", 1, "Animation", "output", 0, "CuffsBlend" ]

[sub_resource type="AnimationNodeStateMachinePlayback" id=91]

[sub_resource type="AnimationNodeAnimation" id=164]
animation = "TentBondageFromSexTease_2"

[sub_resource type="AnimationNodeAnimation" id=125]
animation = "TentBondageKneel_2-loop"

[sub_resource type="AnimationNodeAnimation" id=126]
animation = "TentBondageSexFast_2-loop"

[sub_resource type="AnimationNodeAnimation" id=127]
animation = "TentBondageSexInside_2-loop"

[sub_resource type="AnimationNodeAnimation" id=128]
animation = "TentBondageSexTease_2-loop"

[sub_resource type="AnimationNodeAnimation" id=129]
animation = "TentBondageSex_2-loop"

[sub_resource type="AnimationNodeAnimation" id=130]
animation = "TentBondageStart_2-loop"

[sub_resource type="AnimationNodeAnimation" id=131]
animation = "TentBondageStrokeFast_2-loop"

[sub_resource type="AnimationNodeAnimation" id=132]
animation = "TentBondageStroke_2-loop"

[sub_resource type="AnimationNodeAnimation" id=165]
animation = "TentBondageToSexTease_2"

[sub_resource type="AnimationNodeAnimation" id=133]
animation = "TentBondage_2-loop"

[sub_resource type="AnimationNodeStateMachineTransition" id=134]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=135]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=136]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=137]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=140]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=141]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=142]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=143]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=144]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=145]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=146]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=147]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=148]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=149]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=150]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=151]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=154]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=155]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=166]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id=167]
switch_mode = 2
auto_advance = true
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id=168]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id=169]
switch_mode = 2
auto_advance = true
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id=172]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=173]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=176]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=177]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachine" id=156]
states/TentBondageFromSexTease_2/node = SubResource( 164 )
states/TentBondageFromSexTease_2/position = Vector2( 513, 279 )
states/TentBondageKneel_2-loop/node = SubResource( 125 )
states/TentBondageKneel_2-loop/position = Vector2( 115, 127 )
states/TentBondageSexFast_2-loop/node = SubResource( 126 )
states/TentBondageSexFast_2-loop/position = Vector2( 405, 538 )
states/TentBondageSexInside_2-loop/node = SubResource( 127 )
states/TentBondageSexInside_2-loop/position = Vector2( 199, 448 )
states/TentBondageSexTease_2-loop/node = SubResource( 128 )
states/TentBondageSexTease_2-loop/position = Vector2( 760, 357 )
states/TentBondageSex_2-loop/node = SubResource( 129 )
states/TentBondageSex_2-loop/position = Vector2( 591, 448 )
states/TentBondageStart_2-loop/node = SubResource( 130 )
states/TentBondageStart_2-loop/position = Vector2( 513, 44 )
states/TentBondageStrokeFast_2-loop/node = SubResource( 131 )
states/TentBondageStrokeFast_2-loop/position = Vector2( 1067, 240 )
states/TentBondageStroke_2-loop/node = SubResource( 132 )
states/TentBondageStroke_2-loop/position = Vector2( 772, 216 )
states/TentBondageToSexTease_2/node = SubResource( 165 )
states/TentBondageToSexTease_2/position = Vector2( 237, 290 )
states/TentBondage_2-loop/node = SubResource( 133 )
states/TentBondage_2-loop/position = Vector2( 419, 188 )
transitions = [ "TentBondageStart_2-loop", "TentBondage_2-loop", SubResource( 134 ), "TentBondage_2-loop", "TentBondageStart_2-loop", SubResource( 135 ), "TentBondage_2-loop", "TentBondageKneel_2-loop", SubResource( 136 ), "TentBondageKneel_2-loop", "TentBondage_2-loop", SubResource( 137 ), "TentBondageSexInside_2-loop", "TentBondageSexTease_2-loop", SubResource( 140 ), "TentBondageSexTease_2-loop", "TentBondageSexInside_2-loop", SubResource( 141 ), "TentBondageSex_2-loop", "TentBondageSexTease_2-loop", SubResource( 142 ), "TentBondageSexTease_2-loop", "TentBondageSex_2-loop", SubResource( 143 ), "TentBondageSexTease_2-loop", "TentBondageSexFast_2-loop", SubResource( 144 ), "TentBondageSexFast_2-loop", "TentBondageSexTease_2-loop", SubResource( 145 ), "TentBondageSexInside_2-loop", "TentBondageSex_2-loop", SubResource( 146 ), "TentBondageSex_2-loop", "TentBondageSexInside_2-loop", SubResource( 147 ), "TentBondageSexInside_2-loop", "TentBondageSexFast_2-loop", SubResource( 148 ), "TentBondageSexFast_2-loop", "TentBondageSexInside_2-loop", SubResource( 149 ), "TentBondageSexFast_2-loop", "TentBondageSex_2-loop", SubResource( 150 ), "TentBondageSex_2-loop", "TentBondageSexFast_2-loop", SubResource( 151 ), "TentBondageStroke_2-loop", "TentBondageStrokeFast_2-loop", SubResource( 154 ), "TentBondageStrokeFast_2-loop", "TentBondageStroke_2-loop", SubResource( 155 ), "TentBondage_2-loop", "TentBondageToSexTease_2", SubResource( 166 ), "TentBondageToSexTease_2", "TentBondageSexTease_2-loop", SubResource( 167 ), "TentBondageSexTease_2-loop", "TentBondageFromSexTease_2", SubResource( 168 ), "TentBondageFromSexTease_2", "TentBondage_2-loop", SubResource( 169 ), "TentBondageStroke_2-loop", "TentBondageSexTease_2-loop", SubResource( 172 ), "TentBondageSexTease_2-loop", "TentBondageStroke_2-loop", SubResource( 173 ), "TentBondageStart_2-loop", "TentBondageKneel_2-loop", SubResource( 176 ), "TentBondageKneel_2-loop", "TentBondageStart_2-loop", SubResource( 177 ) ]
start_node = "TentBondageStart_2-loop"
graph_offset = Vector2( -66, -112 )

[sub_resource type="AnimationNodeBlendTree" id=157]
graph_offset = Vector2( -43, 46 )
nodes/StateMachine/node = SubResource( 156 )
nodes/StateMachine/position = Vector2( 435, 158 )
nodes/output/position = Vector2( 680, 180 )
node_connections = [ "output", 0, "StateMachine" ]

[sub_resource type="AnimationNodeStateMachinePlayback" id=23]

[node name="TentaclesBondage" instance=ExtResource( 2 )]
transform = Transform( 0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, -0.038, 0, 0 )
script = ExtResource( 5 )

[node name="Sprite3D" type="Sprite3D" parent="." index="0"]
transform = Transform( 1.528, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.328, 11.717 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 1, 1, 1022, 62 )

[node name="Doll3D" parent="." index="1" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.530061, 0, 0 )

[node name="Tentacles" parent="." index="2" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.530061, 0, 0 )

[node name="AnimationTree" type="AnimationTree" parent="." index="3"]
tree_root = SubResource( 124 )
anim_player = NodePath("../Doll3D/DollSkeleton3/AnimationPlayer")
parameters/CuffsBlend/blend_amount = 0
parameters/StateMachine/playback = SubResource( 91 )

[node name="AnimationTree2" type="AnimationTree" parent="." index="4"]
tree_root = SubResource( 157 )
anim_player = NodePath("../Tentacles/TentaclesAnims3/AnimationPlayer")
parameters/StateMachine/playback = SubResource( 23 )

[editable path="Doll3D"]
[editable path="Doll3D/DollSkeleton"]
[editable path="Doll3D/DollSkeleton2"]
[editable path="Doll3D/DollSkeleton3"]
[editable path="Tentacles"]
[editable path="Tentacles/TentaclesAnims3"]
[editable path="Tentacles/TentaclesTiny"]
